--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>股市提示</title>
 
     
 
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/jquery-ui/jquery-ui.min.css" rel="stylesheet">
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
