Add stock setting function.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="icon shortcut" type="image/x-icon" href="/favicon.ico">
+
     <title>股市提示</title>
 
     
@@ -54,6 +56,7 @@
                 style:'../css',
                 view: '../js/view',
                 model: '../js/model',
+                util: '../js/util',
                 collection: '../js/collection',
 
                 jquery: 'jquery/dist/jquery',
