Finish stock beta.

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
         requirejs.config({
             baseUrl: 'bower_components',
             paths: {
+                config: '../js/config',
                 templates: '../templates',
                 style:'../css',
                 view: '../js/view',
@@ -68,6 +69,7 @@
                 store: 'store.js/store',
                 text: 'requirejs-text/text',
                 doT: 'doT/doT',
+                swfobject: 'swfobject/swfobject/swfobject',
                 notify: 'html5-desktop-notifications/desktop-notify-min',
                 amcharts: 'amcharts/dist/amcharts/amcharts',
                 'amcharts.serial': 'amcharts/dist/amcharts/serial',
