Move some plugins not bower components to /plugin.

--- a/public/index.html
+++ b/public/index.html
@@ -61,14 +61,14 @@
                 collection: '../js/collection',
 
                 jquery: 'jquery/dist/jquery',
-                jqueryUI: 'jquery-ui/jquery-ui.min',
+                jqueryUI: '../plugin/jquery-ui/jquery-ui.min',
                 bootstrap: 'bootstrap/dist/js/bootstrap',
                 backbone: 'backbone/backbone',
                 underscore: 'underscore/underscore',
-                layoutmanager: 'backbone.layoutmanager/backbone.layoutmanager',
+                layoutmanager: '../plugin/backbone.layoutmanager/backbone.layoutmanager',
                 store: 'store.js/store',
-                text: 'requirejs-text/text',
-                doT: 'doT/doT',
+                text: '../plugin/requirejs-text/text',
+                doT: '../plugin/doT/doT',
                 swfobject: 'swfobject/swfobject/swfobject',
                 notify: 'html5-desktop-notifications/desktop-notify-min'
             },
