--- a/public/index.html
+++ b/public/index.html
@@ -59,18 +59,20 @@
                 model: '../js/model',
                 util: '../js/util',
                 collection: '../js/collection',
+                plugin: '../plugin',
 
                 jquery: 'jquery/dist/jquery',
-                jqueryUI: '../plugin/jquery-ui/jquery-ui.min',
                 bootstrap: 'bootstrap/dist/js/bootstrap',
                 backbone: 'backbone/backbone',
                 underscore: 'underscore/underscore',
-                layoutmanager: '../plugin/backbone.layoutmanager/backbone.layoutmanager',
                 store: 'store.js/store',
-                text: '../plugin/requirejs-text/text',
-                doT: '../plugin/doT/doT',
                 swfobject: 'swfobject/swfobject/swfobject',
-                notify: 'html5-desktop-notifications/desktop-notify-min'
+                notify: 'html5-desktop-notifications/desktop-notify-min',
+
+                layoutmanager: 'plugin/backbone.layoutmanager/backbone.layoutmanager',
+                jqueryUI: 'plugin/jquery-ui/jquery-ui.min',
+                text: 'plugin/requirejs-text/text',
+                doT: 'plugin/doT/doT'
             },
             shim: {
                 jquery: {
