--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,6 @@
                 model: '../js/model',
                 util: '../js/util',
                 collection: '../js/collection',
-                plugin: '../plugin',
 
                 jquery: 'jquery/dist/jquery',
                 bootstrap: 'bootstrap/dist/js/bootstrap',
@@ -69,10 +68,10 @@
                 swfobject: 'swfobject/swfobject/swfobject',
                 notify: 'html5-desktop-notifications/desktop-notify-min',
 
-                layoutmanager: 'plugin/backbone.layoutmanager/backbone.layoutmanager',
-                jqueryUI: 'plugin/jquery-ui/jquery-ui.min',
-                text: 'plugin/requirejs-text/text',
-                doT: 'plugin/doT/doT'
+                layoutmanager: '../js/plugin/backbone.layoutmanager/backbone.layoutmanager',
+                jqueryUI: '../js/plugin/jquery-ui/jquery-ui.min',
+                text: '../js/plugin/requirejs-text/text',
+                doT: '../js/plugin/doT/doT'
             },
             shim: {
                 jquery: {
