Change plugin path.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="plugin/jquery-ui/jquery-ui.min.css" rel="stylesheet">
+    <link href="bower_components/plugin/jquery-ui/jquery-ui.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
 
@@ -68,10 +68,10 @@
                 swfobject: 'swfobject/swfobject/swfobject',
                 notify: 'html5-desktop-notifications/desktop-notify-min',
 
-                layoutmanager: '../js/plugin/backbone.layoutmanager/backbone.layoutmanager',
-                jqueryUI: '../js/plugin/jquery-ui/jquery-ui.min',
-                text: '../js/plugin/requirejs-text/text',
-                doT: '../js/plugin/doT/doT'
+                layoutmanager: 'plugin/backbone.layoutmanager/backbone.layoutmanager',
+                jqueryUI: 'plugin/jquery-ui/jquery-ui.min',
+                text: 'plugin/requirejs-text/text',
+                doT: 'plugin/doT/doT'
             },
             shim: {
                 jquery: {
