Change plugins path

--- a/public/index.html
+++ b/public/index.html
@@ -68,10 +68,10 @@
                 swfobject: 'swfobject/swfobject/swfobject',
                 notify: 'html5-desktop-notifications/desktop-notify-min',
 
-                layoutmanager: 'plugin/backbone.layoutmanager/backbone.layoutmanager',
-                jqueryUI: 'plugin/jquery-ui/jquery-ui.min',
-                text: 'plugin/requirejs-text/text',
-                doT: 'plugin/doT/doT'
+                layoutmanager: '../js/plugin/backbone.layoutmanager/index',
+                jqueryUI: '../js/plugin/jquery-ui/jquery-ui.min',
+                text: '../js/plugin/requirejs-text/text',
+                doT: '../js/plugin/doT/doT'
             },
             shim: {
                 jquery: {
