--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                 swfobject: 'swfobject/swfobject/swfobject',
                 notify: 'html5-desktop-notifications/desktop-notify-min',
 
-                layoutmanager: '../js/plugin/backbone.layoutmanager/index',
+                layoutmanager: '../js/plugin/backbone.layoutmanager',
                 jqueryUI: '../js/plugin/jquery-ui/jquery-ui.min',
                 text: '../js/plugin/requirejs-text/text',
                 doT: '../js/plugin/doT/doT'
